add userdata to webinstance b

--- a/CBAProjectTemplate.yml
+++ b/CBAProjectTemplate.yml
@@ -107,8 +107,7 @@ Resources:
       Properties:
         DestinationCidrBlock: 0.0.0.0/0
         GatewayId: !Ref InternetGateWay
-        RouteTableId: !Ref PublicRouteTable
-
+        RouteTableId: !Ref PublicRouteTabe
   WebInstanceA:
       Type: AWS::EC2::Instance
       Properties:
@@ -129,26 +128,6 @@ Resources:
           - Key: Name
             Value: ProjectInstance02
 
-  WebInstanceB:
-      Type: AWS::EC2::Instance
-      Properties:
-        BlockDeviceMappings:
-          - DeviceName: /dev/xvda
-            Ebs:
-              VolumeType: gp3
-              Iops: 3000
-              DeleteOnTermination: true
-              VolumeSize: 8
-        ImageId: ami-03e88be9ecff64781
-        InstanceType: t2.micro
-        KeyName: cba-web-KP
-        SecurityGroupIds:
-          - !Ref SecurityGroup
-        SubnetId: !Ref PrivateSubnet
-        Tags:
-          - Key: Name
-            Value: ProjectInstance02
-        
         UserData:
           Fn::Base64:
             #!/bin/bash
@@ -164,6 +143,42 @@ Resources:
             sudo systemctl status jenkins
             sudo systemctl enable jenkins
             sudo cat /var/lib/jenkins/secrets/initialAdminPassword
+            
+  WebInstanceB:
+      Type: AWS::EC2::Instance
+      Properties:
+        BlockDeviceMappings:
+          - DeviceName: /dev/xvda
+            Ebs:
+              VolumeType: gp3
+              Iops: 3000
+              DeleteOnTermination: true
+              VolumeSize: 8
+        ImageId: ami-03e88be9ecff64781
+        InstanceType: t2.micro
+        KeyName: cba-web-KP
+        SecurityGroupIds:
+          - !Ref SecurityGroup
+        SubnetId: !Ref PublicteSubnet
+        UserData:
+          Fn::Base64:
+            #!/bin/bash
+            sudo yum update -y
+            sudo yum install java-1.8.0-openjdk-devel -y
+            curl --silent --location
+            http://pkg.jenkins-ci.org/redhat-stable/jenkins.repo | sudo tee /etc/yum.repos.d/jenkins.repo
+            sudo rpm --import https://pkg.jenkins.io/redhat/jenkins.io.key
+            sudo systemctl daemon-reload
+            sudo amazon-linux-extras install epel -y
+            sudo yum install jenkins -y
+            sudo systemctl start jenkins
+            sudo systemctl status jenkins
+            sudo systemctl enable jenkins
+            sudo cat /var/lib/jenkins/secrets/initialAdminPassword
+        Tags:
+          - Key: Name
+            Value: ProjectInstance02
+        
 
       
     
